UI画面のファイルのみ追加しました

--- a/views/login.pug
+++ b/views/login.pug
@@ -1,2 +1,9 @@
-extends layout 
+extends layout
 
+この画面からの移動先
+1.〇index画面へ views/index.pug
+2.✕問題と答えを新規作成画面へ views/new.pug
+3.✕あなたの三択設定画面へ views/sentakuset.pug
+4.✕三択を解く画面へ views/question.pug
+5.✕自分が作成した問題を一覧表示する画面へ views/list.pug
+6.✕問題と答えを編集する画面へ views/edit.pug
