--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,5 @@
 extends layout
 
-この画面からの移動先
-1.✕index画面へ views/index.pug
-2.〇問題と答えを新規作成画面へ views/new.pug
-3.〇あなたの三択設定画面へ views/sentakuset.pug
-4.✕三択を解く画面へ views/question.pug
-5.〇自分が作成した問題を一覧表示する画面へ views/list.pug
-6.✕問題と答えを編集する画面へ views/edit.pug
+block content
+  h1= title
+  p Welcome to #{title}
