--- a/views/new.pug
+++ b/views/new.pug
@@ -1,9 +1,43 @@
 extends layout
 
-この画面からの移動先
-1.〇index画面へ views/index.pug
-2.✕問題と答えを新規作成画面へ views/new.pug
-3.✕あなたの三択設定画面へ views/sentakuset.pug
-4.✕三択を解く画面へ views/question.pug
-5.✕自分が作成した問題を一覧表示する画面へ views/list.pug
-6.✕問題と答えを編集する画面へ views/edit.pug
+block content
+  p method-actionは #{title}
+  p viewのファイル名は_new.pug [問題と答えの新規作成画面]
+  p -----------------------------------------------------------------------------------------
+      br
+      a.btn(href="/") index画面へ戻る
+  p -----------------------------------------------------------------------------------------
+  form(method="post" action="/") ■問題と回答を登録してください
+      br
+      span 問題:
+      br
+      input(type="text" name="mondai")
+      br
+      span 答え:
+      br
+      input(type="text" name="kotae")
+      br
+      span 解説:
+      br
+      input(type="text" name="kaisetu")
+      br
+      br
+      span ジャンル:
+      br
+      select(name="blood")
+        br
+        option(value="taxmaster") 税理士
+        option(value="programer") プログラミング
+        option(value="rule") 会社ルール
+        option(value="sonota") その他
+      br
+      button(type="submit") 問題を新規登録する
+  p ▼▼▼▼▼※開発用の案内につきここから下は削除予定▼▼▼▼▼▼
+  ul この画面からの移動先
+    li
+     a(href="/") 1.〇index画面へ views/index.pug
+    li 2.✕問題と答えを新規作成画面へ views/new.pug
+    li 3.✕あなたの三択設定画面へ views/sentakuset.pug
+    li 4.✕三択を解く画面へ views/question.pug
+    li 5.✕自分が作成した問題を一覧表示する画面へ views/list.pug
+    li 6.✕問題と答えを編集する画面へ views/edit.pug
