Add-authe-github

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,15 @@ block content
   p method-actionは #{title}
   p viewのファイル名_index.pug [タイトル画面]
   p -----------------------------------------------------------------------------------------
+  div
+    if user
+      a(href="/logout") #{user.username} をログアウト
+    else
+      a(href="/login") ログイン
+
+
+  p -----------------------------------------------------------------------------------------
+
       br
       a.btn(href="/question/questionId") 三択を解く画面へ
       br
