--- a/views/login.pug
+++ b/views/login.pug
@@ -1,9 +1,20 @@
 extends layout
 
-この画面からの移動先
-1.〇index画面へ views/index.pug
-2.✕問題と答えを新規作成画面へ views/new.pug
-3.✕あなたの三択設定画面へ views/sentakuset.pug
-4.✕三択を解く画面へ views/question.pug
-5.✕自分が作成した問題を一覧表示する画面へ views/list.pug
-6.✕問題と答えを編集する画面へ views/edit.pug
+block content
+  p method-actionは #{title}
+  p viewのファイル名_login.pug [ログイン画面]
+  p -----------------------------------------------------------------------------------------
+   br
+   a(href="/auth/github") GitHubでログイン
+  if user
+     p 現在 #{user.username} でログイン中
+     br
+  p ▼▼▼▼▼※開発用の案内につきここから下は削除予定▼▼▼▼▼▼
+  ul この画面からの移動先
+    li
+     a(href="/") 1.〇index画面へ views/index.pug
+    li 2.✕問題と答えを新規作成画面へ views/new.pug
+    li 3.✕あなたの三択設定画面へ views/sentakuset.pug
+    li 4.✕三択を解く画面へ views/question.pug
+    li 5.✕自分が作成した問題を一覧表示する画面へ views/list.pug
+    li 6.✕問題と答えを編集する画面へ views/edit.pug
