Oauth認証後のログイン画面の条件分岐追加

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,14 +6,8 @@ block content
   p -----------------------------------------------------------------------------------------
   div
     if user
-      a(href="/logout") #{user.username} をログアウト
-    else
-      a(href="/login") ログイン
-
-
-  p -----------------------------------------------------------------------------------------
-
-      br
+      a(href="/logout") #{user.username} さんをログアウト
+      p -----------------------------------------------------------------------------------------
       a.btn(href="/question/questionId") 三択を解く画面へ
       br
       a.btn(href="/question/sentakuset") あなたの三択設定へ移動する
@@ -21,6 +15,13 @@ block content
       a.btn(href="/question/new") 問題作成画面へ移動する
       br
       a.btn(href="/question/list") 自分が作成した問題を一覧表示へ移動する
+
+    else
+      a(href="/login") ログイン画面へ
+
+
+  p -----------------------------------------------------------------------------------------
+
   p ▼▼▼▼▼※開発用の案内につきここから下は削除予定▼▼▼▼▼▼
   ul この画面からの移動先
     li 1.✕index画面へ views/index.pug
